--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW_10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <p class="main-title">Посилання на сторінки:</p>
+    <ul class="main-list">
+      <li class="main-item"><a href="1-timer.html">Timer</a></li>
+      <li class="main-item"><a href="2-snackbar.html">Snackbar</a></li>
+    </ul>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
